deploy/bot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "service-id7141-bot"
  namespace: "id7141"
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  type: NodePort
  selector:
    app: "id7141-bot"
